--- a/scss/components/_story.scss
+++ b/scss/components/_story.scss
@@ -9,7 +9,6 @@
 
 .story {
     width: 65%;
-    box-shadow: 0 20px 40px rgba($color-black, 0.2);
     background-color: rgba($color-white, 0.5);
     padding: 4rem;
     border-radius: 3px;
