--- a/scss/components/_tour-card.scss
+++ b/scss/components/_tour-card.scss
@@ -87,30 +87,18 @@
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
     &--1 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-secondary-light,
-          $color-secondary-dark
-        ),
-        url(../../img/nat-5.jpg);
+      background-image: url(../../img/nat-5.jpg);
+      background-color: $color-secondary-dark;
     }
 
     &--2 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-primary-light,
-          $color-primary-dark
-        ),
-        url(../../img/nat-6.jpg);
+      background-image: url(../../img/nat-6.jpg);
+      background-color: $color-primary-dark;
     }
 
     &--3 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
-        ),
-        url(../../img/nat-7.jpg);
+      background-image: url(../../img/nat-7.jpg);
+      background-color: $color-tertiary-dark;
     }
   }
 
