--- a/scss/main.css
+++ b/scss/main.css
@@ -87,6 +87,7 @@
 
 html {
   font-size: 100%;
+  overflow-x: hidden;
 }
 @media (max-width: 1200px) {
   html {
@@ -114,6 +115,11 @@ body {
 @media (max-width: 900px) {
   body {
     padding: 0;
+  }
+}
+@media (max-width: 400px) {
+  body {
+    overflow-x: hidden;
   }
 }
 
@@ -285,7 +291,6 @@ body {
   background-size: cover;
   width: 70%;
   border-radius: 3px;
-  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
   padding: 2rem 3rem;
 }
 @media (max-width: 1200px) {
@@ -496,13 +501,16 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
 .tour-card__picture--1 {
-  background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../../img/nat-5.jpg);
+  background-image: url(../../img/nat-5.jpg);
+  background-color: #ff7730;
 }
 .tour-card__picture--2 {
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../../img/nat-6.jpg);
+  background-image: url(../../img/nat-6.jpg);
+  background-color: #28b485;
 }
 .tour-card__picture--3 {
-  background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../../img/nat-7.jpg);
+  background-image: url(../../img/nat-7.jpg);
+  background-color: #5643fa;
 }
 .tour-card__heading {
   text-transform: uppercase;
@@ -663,7 +671,6 @@ body {
 
 .story {
   width: 65%;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
   background-color: rgba(255, 255, 255, 0.5);
   padding: 4rem;
   border-radius: 3px;
@@ -1134,13 +1141,7 @@ body {
 @media (max-width: 600px) {
   .navigation__button {
     top: 20px;
-    right: 40px;
-  }
-}
-@media (max-width: 400px) {
-  .navigation__button {
-    top: 20px;
-    right: 130px;
+    right: 20px;
   }
 }
 .navigation__background {
@@ -1163,13 +1164,7 @@ body {
 @media (max-width: 600px) {
   .navigation__background {
     top: 20px;
-    right: 40px;
-  }
-}
-@media (max-width: 400px) {
-  .navigation__background {
-    top: 20px;
-    right: 135px;
+    right: 25px;
   }
 }
 .navigation__nav {
