--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -123,7 +123,6 @@
   background-size: cover;
   width: 70%;
   border-radius: 3px;
-  box-shadow: 0 15px 40px rgba($color-black, 0.2);
   padding: 2rem 3rem;
 
   @include respond(tab-land) {
